--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -29,3 +29,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/PythonScriptPlugin.PythonScriptPluginSettings]
 bRemoteExecution=True
 
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AutoExposure=False
+
