implement dash no animation

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -31,4 +31,6 @@ bRemoteExecution=True
 
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.AntiAliasing=1
+r.DefaultFeature.MotionBlur=False
 
