--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -79,9 +79,19 @@ FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
++ActionMappings=(ActionName="Dash",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
++ActionMappings=(ActionName="Dash",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Left)
++ActionMappings=(ActionName="Reset",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Top)
++ActionMappings=(ActionName="Reset",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Gamepad_LeftX)
++AxisMappings=(AxisName="SetUpAxis",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="SetRightAxis",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="SetUpAxis",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="SetUpAxis",Scale=1.000000,Key=Gamepad_LeftY)
++AxisMappings=(AxisName="SetRightAxis",Scale=-1.000000,Key=A)
++AxisMappings=(AxisName="SetRightAxis",Scale=1.000000,Key=Gamepad_LeftX)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
